fix navbar menu display issue on smaller screens

--- a/main.css
+++ b/main.css
@@ -647,8 +647,8 @@ a.active, a:hover {
 	}
 	ul {
 		position: fixed;
-		width: 100%;
-		height: 100vh;
+		/* width: 100%; these were causing an issue with the menu showing on the side on smaller screens, removing for now
+		height: 100vh; */ 
 		background: var(--dark-purple);
 		top: 70px;
 		right: -100%;
